...
        ]}
      >
        {/* Title Row */}
        <View style={styles.header}>
          <View style={styles.headerContent}>
            <IOSText textStyle="title1" weight="bold" style={styles.headerTitle}>
              Schedule
            </IOSText>
            <ProfileButton size={36} />
          </View>
          <FloatingEventSwitch
            options={[
              { label: 'APAC 2026', shortLabel: 'APAC 2026', value: EVENTS.APAC_2026.id },
              { label: 'Worlds 2027', shortLabel: 'Worlds 2027', value: EVENTS.WORLDS_2027.id }
            ]}
            selectedValue={selectedEvent}
            onValueChange={setSelectedEvent}
          />
        </View>

...
